Renamed App to SmartVolume

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "nl.melledijkstra.noisenotifier"
+        applicationId "nl.melledijkstra.smartvolume"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
